# newspeech

./: .gitignore  1-streaks.html  10-edges.html  11-slitscan.html  12-edgemask.html  13-pixelsort.html  14-blockshuffle.html  15-ascii.html  16-network.html  17-flare.html  18-chevron.html  19-feed.html  2-static.html  20-repeat.html  21-mosh.html  22-timeshear.html  23-smear.html  24-melt.html  25-dither.html  26-topo.html  3-invert.html  4-blocks.html  5-stars.html  6-grid.html  7-ridges.html  8-rings.html  9-swarm.html  CLAUDE.md  IDEAS.md  build.sh  core.js  glitch-bb7aff.html  grain.js  index.html  live-hydra.html  live.html  nav.js  netlify.toml  samples.html  sequence-098a79.html  (+5 more)
posts/: 2026-05-17-hello-world.md  2026-05-22-about-sequence.md  2026-06-14-sequence-0-5-3.md  2026-07-16-texture.md
sequencer/: .release-env.example  CLAUDE.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
sequencer/docs/: accumulator-and-channel-screen.md  loop-resample.md  offline-bounce.md  per-pattern-meter.md  perform-mode.md  tracker-instrument-voice.md  wavetable-crunch-debug.md
sequencer/public/samples/encounter/: manifest.json
sequencer/public/samples/hydrasynth_plaits/: manifest.json
sequencer/public/samples/mini-moog/: manifest.json
sequencer/public/samples/rhodes_mk1/: manifest.json
sequencer/public/samples/root_grain/: manifest.json
sequencer/public/samples/sinewaves-at-the-scope/: manifest.json
sequencer/public/samples/soft_piano/: manifest.json
sequencer/public/samples/tape_piano/: manifest.json
sequencer/public/worklets/: glitch-machine.js  master-compressor.js  master-distortion.js  master-gate.js  recorder.js  reverb-machine.js  tape-machine.js  track-ladder.js
sequencer/scripts/: build-faust-worklets.mjs  release.sh  xl3-bitmap.mjs
sequencer/src/: App.tsx  StreamWindow.tsx  index.css  main.tsx  updater.ts  vite-env.d.ts
sequencer/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
sequencer/src-tauri/capabilities/: default.json
sequencer/src-tauri/icons/: icon.icns
sequencer/src-tauri/src/: audio.rs  delay.rs  lib.rs  main.rs  midi.rs  projectfs.rs  recording.rs  reverb.rs  reverb_dsp.rs  samples.rs
sequencer/src/audio/: accumulator.ts  audioContext.ts  audioOutput.ts  chordContext.ts  chords.ts  clickIn.ts  clockFollow.ts  delay.ts  engineClock.ts  euclidean.ts  fxModulation.ts  glitch.ts  harmonicMotion.ts  lfo.ts  loops.ts  macros.ts  master.ts  midiClock.ts  midiOut.ts  monitor.ts  morph.ts  mutationOverlay.ts  mutationTie.ts  mutationTree.ts  nativeEngine.ts  nativeRecorder.ts  noise.ts  padState.ts  perform.ts  recorder.ts  recorderConfig.ts  reverb.ts  samplePlayer.ts  saturation.ts  scale.ts  scheduler.ts  scope.ts  sliceHits.ts  synth.ts  tape.ts  (+6 more)
sequencer/src/components/: BankPad.tsx  ChannelScreen.tsx  ConductorPanel.tsx  ConfirmDialog.tsx  EnvelopeGraph.tsx  FXPanel.tsx  GhostDebug.tsx  GhostPanel.tsx  InstrumentEditor.tsx  InstrumentEditorDialog.tsx  InstrumentLibraryDialog.tsx  InstrumentLibraryPane.tsx  Knob.tsx  LFOPanel.tsx  LfoShapePlot.tsx  LoopsPanel.tsx  MacroKnob.tsx  MacroStrip.tsx  MidiBar.tsx  ModSection.tsx  NativeAudioPanel.tsx  NewInstrumentDialog.tsx  NoisePanel.tsx  PerformPanel.tsx  PerformanceDialog.tsx  PianoRoll.tsx  RowPanel.tsx  SampleLibraryPane.tsx  ScenePad.tsx  SceneSettingsDialog.tsx  Scope.tsx  SettingsDialog.tsx  SongView.tsx  StepButton.tsx  StepInspector.tsx  Toasts.tsx  Track.tsx  TrackGrid.tsx  TrackKnob.tsx  Transport.tsx  (+2 more)
sequencer/src/conductor/: conductor.ts  generator.ts
sequencer/src/engine/: tick.ts
sequencer/src/ghost/: entropy.ts  ghost.ts  shape.ts
sequencer/src/hooks/: useAudioOutputs.ts  useLFOValue.ts  useMIDIInputs.ts  useMIDIOutputs.ts  useMidiLearn.ts  useRoutedLFOs.ts
sequencer/src/instruments/: library.ts  manifestRegistry.ts  saveInstrument.ts  useRegistryKits.ts  useRegistryVoices.ts  userInstrumentsStore.ts  userSamplesDir.ts  voiceEditsStore.ts
sequencer/src/midi/: bluebox.ts  controllerPresets.ts  externalMixer.ts  launchControlXL3.ts  launchControlXL3Bindings.ts  launchpad.ts  launchpadBindings.ts  midiIn.ts  midiMap.ts  midiMapFile.ts  midiMapLoader.ts  midiMapStore.ts  recordInput.ts  xl3Bitmaps.ts
sequencer/src/state/: defaultPreset.json  document.ts  hydrate.ts  persist.ts  songFileSync.ts  store.ts
sequencer/src/stream/: Camera.tsx  Datafeed.tsx  Edges.tsx  GlitchWrap.tsx  Pool.tsx  TransitionCue.tsx  Visualizer.tsx  streamEvents.ts  useTransitionCountIn.ts
sequencer/src/tracker/: exportPti.ts  sliceDetect.ts  waveformPeaks.ts
tools/: build-news.mjs  build-samples-manifest.mjs
tools/reel-render/: .gitignore  audio.mjs  package-lock.json  package.json  render.mjs  studio.html  studio.mjs
vst/glitch/: README.md  build.sh
vst/glitch/dsp/: combined.dsp  glitch.dsp  reverb.dsp  tape.dsp
vst/saturator/: build.sh
vst/saturator/dsp/: saturator.dsp
(+100 files in other folders)
