[package]
name = "sequence"
# Intentionally fixed. Release version lives in package.json; Tauri sources the
# bundle version from there via tauri.conf.json ("version": "../package.json").
# Cargo can't read package.json, so this crate version is meaningless — leave it.
version = "0.0.0"
description = "Sequence — newspeech sequencer"
authors = ["newspeech"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sequence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
midir = "0.10"
cpal = "0.15"
hound = "3.5"
ringbuf = "0.4"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
arc-swap = "1.7"

[target.'cfg(target_os = "macos")'.dependencies]
# objc2 family — the supported successor to the (now EOL) cocoa/objc crates.
# Versions track what tauri/wry already pull into the lockfile so the graph
# stays single-version. Per-crate feature flags gate the exact ObjC classes we
# touch: NSData (dock icon bytes), NSImage/NSApplication (dock icon), NSView/
# NSWindow (stream-window level), and the WKUIDelegate media-capture method
# (which itself requires WKFrameInfo + WKSecurityOrigin + block2).
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData"] }
objc2-app-kit = { version = "0.3", features = [
  "NSApplication",
  "NSImage",
  "NSResponder",
  "NSView",
  "NSWindow",
] }
objc2-web-kit = { version = "0.3", features = [
  "WKWebView",
  "WKUIDelegate",
  "WKFrameInfo",
  "WKSecurityOrigin",
  "block2",
  "objc2-app-kit",
] }
block2 = "0.6"
